# kodo

./: .gitignore  CMakeLists.txt  Function.cpp  InputFile.cpp  Interpreter.cpp  NumberLiteral.cpp  Scope.cpp  TODO.txt  ast.cpp  atom.cpp  atomlinker.cpp  error.cpp  forward_declare.cpp  keywords.gperf  keywords.gperf.gen.inc  lexer.cpp  main.cpp  node_clone.cpp  node_print.cpp  node_tree_compare.cpp  parser.cpp  todo.txt  type.cpp
include/: Cast.h  Error.h  GlobalContext.h  InputFile.h  Interpreter.h  Node.h  NumberLiteral.h  Token.h  Type.h  ast.h  atomlinker.h  common.h  error.h  lexer.h  parser.h  type.h
include/Node/: Call.h  Cast.h  Context.h  Function.h  IfStatement.h  NumberLiteral.h  Scope.h  SignedExtend.h  TemplatePlaceholder.h  UnresolvedRef.h  Variable.h
test/: test_main.cpp
test/must_interpret_equal/: add.sv  upcast.sv
test/must_not_parse/: fn_param_trailing_comma.sv  missing_argument_type.sv
test/must_not_resolve/: already_declared_different_type.sv  already_declared_global.sv  arguments_leak_test.sv  block_local_leak_test.sv  if_decl_leak_test.sv  invalid_template.sv  local_variable_leak_test.sv  return_type_overload.sv  same_function_1.sv  same_function_2.sv
test/must_parse/: call.sv  function.sv  if_statement.sv  number_literal.sv  scope.sv  template_fn_1.sv
test/must_resolve/: bind_arguments.sv  bind_global_variable.sv  decl_assign.sv  decl_assign_cast.sv  implicit_decl_1.sv  implicit_decl_2.sv  number_literal_implicit_cast.sv  overload_different_arity.sv  overload_same_arity.sv  simple_template_1.sv  simple_template_2.sv  template_3.sv  var_decl_in_if_stmt.sv
test/parser_tree_compare/: add_left_assoc.sv  add_mul_prec.sv  assign_right_assoc.sv  decl_assign_prec.sv  div_left_assoc.sv  inferdecl.sv  mod_left_assoc.sv  mul_add_prec.sv  mul_left_assoc.sv  sub_left_assoc.sv
